--- a/public/test.html
+++ b/public/test.html
@@ -1,21 +1,14 @@
-import logo from './logo.svg';
-import './App.css';
-import 'bootstrap/dist/css/bootstrap.min.css';
-import 'bootstrap/dist/js/bootstrap.bundle.min.js'
-
-function App() {
-  return (
-    <div className="container">
+<div className="container">
     <div className="row">
         <div className="col col-12 col-sm-12 col-lg-12 col-md-12 col-xl-12 col-xxl-12">
-            <div className="row g-3">
+            <div className="row">
                 <div className="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" className="form-label">Username</label>
-                    <input type="text" className="form-control"/>
+                    <input type="text" className="form-control">
                 </div>
                 <div className="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" className="form-label">Password</label>
-                    <input type="text" className="form-control"/>
+                    <input type="text" className="form-control">
                 </div>
                 <div className="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <button className="btn btn-success">LOGIN</button>
@@ -27,7 +20,3 @@ function App() {
         </div>
     </div>
 </div>
-  );
-}
-
-export default App;
